--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ humansize="2.1"
 once_cell = "1.17"
 eframe = "0.25"
 egui = "0.25"
+tokio = { version = "1.41.1", features = ["full"] }
+iced = "0.13.1"
+parking_lot = "0.12"
