--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,10 @@ once_cell = "1.17"
 eframe = "0.25"
 egui = "0.25"
 tokio = { version = "1.41.1", features = ["full"] }
+async-openai = "=0.14.3"
+dotenv = "0.15"
 iced = "0.13.1"
 parking_lot = "0.12"
+serde_json = "1.0.133"
+serde = "1.0.215"
+clap = { version = "4.2", features = ["derive"] }
